RESOLVED FIXED12409
REGRESSION (r19039): Drag caret isn't cleared after a drop
https://bugs.webkit.org/show_bug.cgi?id=12409
Summary REGRESSION (r19039): Drag caret isn't cleared after a drop
Justin Garcia
Reported 2007-01-25 14:09:30 PST
Drag and drop some content into an editable region, and a solid black rectangle will appear to the left/right of the dropped content.
Attachments
patch (4.20 KB, patch)
2007-01-25 15:16 PST, Justin Garcia
oliver: review+
Justin Garcia
Comment 1 2007-01-25 15:16:13 PST
Oliver Hunt
Comment 2 2007-01-25 15:20:09 PST
Comment on attachment 12675 [details] patch looks good
Justin Garcia
Comment 3 2007-01-25 15:24:21 PST
Note You need to log in before you can comment on or make changes to this bug.