LayoutTests:

Reviewed by oliver
        
        <http://bugs.webkit.org/show_bug.cgi?id=12409>
        REGRESSION (r19039): Drag caret isn't cleared after a drop

        * editing/pasteboard/4947130-expected.checksum:
        * editing/pasteboard/4947130-expected.png:

WebCore:

        Reviewed by oliver
        
        <http://bugs.webkit.org/show_bug.cgi?id=12409>
        REGRESSION (r19039): Drag caret isn't cleared after a drop

        No new layout tests because the regression was
        caught by current layout tests.

        * page/DragController.cpp:
        (WebCore::DragController::concludeDrag): Clear the drag caret.



git-svn-id: svn://svn.chromium.org/blink/trunk@19133 bbb929c8-8fbe-4397-9dbb-9b2b20218538