third_party/WebKit/WebCore/page/DragController.cpp
@@ -321,9 +321,10 @@ bool DragController::concludeDrag(DragData* dragData, DragDestinationAction acti
         return false;
     }
 
-
-    RefPtr<Range> range = m_page->dragCaretController()->toRange();
-    if (dragIsMove(innerFrame->selectionController(), dragData) || m_page->dragCaretController()->isContentRichlyEditable()) { 
+    Selection dragCaret(m_page->dragCaretController()->selection());
+    m_page->dragCaretController()->clear();
+    RefPtr<Range> range = dragCaret.toRange();
+    if (dragIsMove(innerFrame->selectionController(), dragData) || dragCaret.isContentRichlyEditable()) { 
         bool chosePlainText = false;
         RefPtr<DocumentFragment> fragment = documentFragmentFromDragData(dragData, range, true, chosePlainText);
         if (!fragment || !innerFrame->editor()->shouldInsertFragment(fragment, range, EditorInsertActionDropped))
@@ -334,9 +335,9 @@ bool DragController::concludeDrag(DragData* dragData, DragDestinationAction acti
             bool smartMove = innerFrame->selectionGranularity() == WordGranularity 
                           && innerFrame->editor()->smartInsertDeleteEnabled() 
                           && dragData->canSmartReplace();
-            applyCommand(new MoveSelectionCommand(fragment, innerFrame->dragCaretController()->base(), smartMove));
+            applyCommand(new MoveSelectionCommand(fragment, dragCaret.base(), smartMove));
         } else {
-            innerFrame->selectionController()->setSelection(innerFrame->dragCaretController()->selection());
+            innerFrame->selectionController()->setSelection(dragCaret);
             applyCommand(new ReplaceSelectionCommand(m_document, fragment, true, dragData->canSmartReplace(), chosePlainText)); 
         }    
     } else {
@@ -345,7 +346,7 @@ bool DragController::concludeDrag(DragData* dragData, DragDestinationAction acti
             return false;
         
         m_client->willPerformDragDestinationAction(DragDestinationActionEdit, dragData);
-        innerFrame->selectionController()->setSelection(innerFrame->dragCaretController()->selection());
+        innerFrame->selectionController()->setSelection(dragCaret);
         applyCommand(new ReplaceSelectionCommand(m_document, createFragmentFromText(range.get(), text), true, false, true)); 
     }
 
